Added extra descriptions for fluids

--- a/src/main/resources/assets/xtradrinks/lang/en_US.lang
+++ b/src/main/resources/assets/xtradrinks/lang/en_US.lang
@@ -116,5 +116,5 @@ achievement.jucetanium.desc=Obtain a Juicetanium ingot
 entity.greenman.name=Green Man
 
 //Jei info
-jei.xtradrinks.buckets_found=These buckets can be found inside of naturally spawning wells.
+jei.xtradrinks.buckets_found=These Fluids can be found inside of naturally spawning wells.
 jei.xtradrinks.buckets_liquid_dehydrator=Put the fluids into a Liquid Dehydrator to get the respective shards to turn into ingots.
