--- a/src/main/resources/assets/xtradrinks/lang/en_us.json
+++ b/src/main/resources/assets/xtradrinks/lang/en_us.json
@@ -77,6 +77,7 @@
   "item.xtradrinks.drink_tropical_punch_juice":"Tropical Punch",
   "item.xtradrinks.molten_liquadium_bucket":"Molten Liquadium Bucket",
   "item.xtradrinks.molten_fizzium_bucket":"Molten Fizzium Bucket",
+  "item.xtradrinks.greenman_spawn_egg":"Green Man Spawn Egg",
 
   "fluid.xtradrinks.molten_liquadium":"Molten Liquadium",
   "fluid.xtradrinks.molten_fizzium":"Molten Fizzium",
