--- a/src/main/resources/assets/xtradrinks/lang/en_us.json
+++ b/src/main/resources/assets/xtradrinks/lang/en_us.json
@@ -105,5 +105,9 @@
 
   "jei.xtradrinks.buckets_found":"These Fluids can be found inside of naturally spawning wells.",
   "jei.xtradrinks.buckets_liquid_dehydrator":"Put the fluids into a Liquid Dehydrator to get the respective shards to turn into ingots.",
-  "jei.xtradrinks.fruit":"Can be obtained by the greenman. Simply find one and right click to open the GUI and there is a chance it will have this fruit!"
+  "jei.xtradrinks.fruit":"Can be obtained by the greenman. Simply find one and right click to open the GUI and there is a chance it will have this fruit!",
+
+  "material.xtradrinks.juicetanium":"Juicetanium",
+  "material.xtradrinks.fizzium":"Fizzium",
+  "material.xtradrinks.liquadium":"Liquadium"
 }
